--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url(img.jpg) no-repeat;
+    background: url(rain.jpg) no-repeat;
     background-size: cover;
     background-position: center;
 }
@@ -19,12 +19,12 @@ body{
 .inner-box{
     width: 420px;
     background: transparent;
-    color: white;
+    color: rgb(11, 57, 78);
     border-radius: 10px;
     padding: 30px 40px;
-    backdrop-filter: blur(20px);
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    backdrop-filter: blur(30px);
     border: 2px solid rgba(255, 255, 255, .2);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
 }
 
 .inner-box h1{
@@ -135,3 +135,4 @@ body{
     text-decoration: underline;
     font-weight: 600;
 }
+
